--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ google-api-python-client~=2.40.0
 
 setuptools~=57.0.0
 #pylcars~=0.0.1
-PyQt5~=5.15.6
+PyQt5
 xxhash~=3.0.0
 #PyAudio~=0.2.11
 python-dateutil~=2.8.1
