--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ pytz~=2021.1
 #numpy~=1.20.1
 httplib2~=0.20.4
 oauth2client~=4.1.3
-python-mpv
-
+#python-mpv currently buggy 
+python-mpv==0.5.2
 pylcars~=0.0.1
 pathlib~=1.0.1
 numpy~=1.20.1
